css/wishlist.css
@import '/css/mystyles.css';

.active-wishlist{
  background-color: hsl(0, 0%, 86%);
}

.wish-image{
  max-height: 128px;
  max-width: 128px;
  width: auto;
  height: auto;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

.wish-image-container{
  display:flex;
  justify-content: center;
  height: 128px;
  width: 128px;
  overflow: hidden;
  position: relative;
}

.actual-wishcard:hover{
  transform: translate(-0.05rem, -0.05rem);
  box-shadow: 0 0 10px 3px #7de2d1;
}
#create-new-wishlist:hover, #add-an-idea:hover, #edit-wishlist:hover, .button:hover, li:hover{
  box-shadow: 0 0 5px 1px #7de2d1;
}

#create-new-wishlist, #add-an-idea, #edit-wishlist, li{
  border-radius: 5px;
}

#wishes, #wishlists{
  height: 100vh;
  padding: 10px;
  overflow-y: auto;
  scrollbar-width: none;
}

#platzhalter{
  height: 400px;
}

